# Telegram-summarizer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  AUDIO_FEATURES.md  AUDIO_INCREMENT_SUMMARY.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_READY.md  Dockerfile  ENHANCEMENT_SUMMARY.md  GEMINI_SETUP.md  INFRASTRUCTURE_IMPROVEMENTS.md  KIMI_K2_UPGRADE_SUMMARY.md  MODEL_UPDATE.md  OCR_PPTX_INTEGRATION_SUMMARY.md  OPENROUTER_SETUP.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_SUMMARY.md  RAILWAY_CONFIG.md  RAILWAY_DEPLOY.md  RAILWAY_ENV_UPDATE.md  README.md  REFACTORED_QUICKSTART.md  REFACTORING.md  WEB_EXTRACTOR_INTEGRATION_SUMMARY.md  WHISPER_INSTALLATION.md  alembic.ini  app.py  audio_processor.py  background_worker.py  background_worker_config.py  background_worker_optimized.py  bot_database.db  cloudrun_deploy.py  cloudrun_optimized.py  (+45 more)
alembic/: env.py
asr/: __init__.py  asr_router.py  transcribe.py
attached_assets/: Pasted---1754899787904_1754899787904.txt  Pasted---1755597796998_1755597796998.txt  Pasted---1755840325246_1755840325246.txt  Pasted--1-ffmpeg-Railway-Nixpacks-nixpac-1754905797374_1754905797374.txt  Pasted--Add-text-based-command-alternatives-to-the-existing-Telegram-bot-while-preserving-ALL-current-funct-1753425938042_1753425938042.txt  Pasted--EN--1755151208427_1755151208427.txt  Pasted--ImportError-cannot-import-name-is-audio-document-from-utils-tg-audio--1755860879475_1755860879475.txt  Pasted--Python-3-9-Telegram-python-telegram-bo-1752837543945_1752837543945.txt  Pasted--Railway-Download-error-SimpleTelegramBot-object-has-no-a-1754907351393_1754907351393.txt  Pasted--Replit-Agent-Telegram-Telegram--1753287439625_1753287439626.txt  Pasted--Telegram--1753420764717_1753420764717.txt  Pasted--Telegram--1753766349483_1753766349483.txt  Pasted--Telegram--1754995104097_1754995104098.txt  Pasted--Telegram--1756790067768_1756790067769.txt  Pasted--Telegram-Bot-Telegram-Python--1752837703684_1752837703684.txt  Pasted--Telegram-Groq-API--1753775489409_1753775489410.txt  Pasted--Telegram-Groq-Llama-3-3-70B--1756884060182_1756884060182.txt  Pasted--Telegram-TelegramCompanion-Errno-2-No-such-1755148731022_1755148731023.txt  Pasted--TelegramCompanion--1755599916422_1755599916423.txt  Pasted--TelegramCompanion-README-md--1755150429631_1755150429632.txt  Pasted--YouTube-Telegram-Groq-API--1753768594060_1753768594061.txt  Pasted--audio-document-MIME--1755160271939_1755160271940.txt  Pasted--inline-Inline--1753423328234_1753423328234.txt  Pasted--inline-Telegram--1753422456551_1753422456551.txt  Pasted--inline-reply--1755754720735_1755754720735.txt  Pasted--message-voice-mime-type-audio-ogg-file-id--1754908912270_1754908912270.txt  Pasted--simple-bot-py-edit-message--1755764174020_1755764174020.txt  Pasted--start-HTML--1755149671542_1755149671542.txt  Pasted--voice--1755770730906_1755770730906.txt  Pasted-TASK-Telegram--1755768724466_1755768724466.txt  (+7 more)
(+119 files in other folders)
