[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "flask>=3.0.0",
    "python-dotenv>=1.1.1",
    "validators>=0.35.0",
    "beautifulsoup4>=4.13.4",
    "trafilatura>=1.6.1",
    "readability-lxml>=0.8.4.1",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.9.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "imageio-ffmpeg>=0.4.9",
    "yt-dlp>=2025.01.26",
    "groq>=0.30.0",
    "sumy>=0.11.0",
    "razdel>=0.5.0",
    "natasha>=1.4.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.2",
    "gunicorn>=20.1.0",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"