[project]
name = "telegram-summarization-bot"
version = "2.0.0"
description = "Advanced AI-powered Telegram bot for multilingual text summarization"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles>=22.1.0",
    "aiohttp>=3.9.1",
    "beautifulsoup4>=4.12.2", 
    "flask>=3.0.0",
    "groq>=0.30.0",
    "gunicorn>=20.1.0",
    "imageio-ffmpeg>=0.4.8",
    "lxml>=4.9.2",
    "mammoth>=1.5.1",
    "natasha>=1.4.0",
    "pdfplumber>=0.7.6",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.23.14",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.2",
    "yt-dlp>=2025.01.26",
    "sumy>=0.11.0",
    "razdel>=0.5.0",
    "trafilatura>=1.6.4",
    "readability-lxml>=0.8.1",
    "validators>=0.22.0",
    "python-magic>=0.4.27",
    "aiolimiter>=1.1.0",
    "langdetect>=1.0.9",
    "youtube-transcript-api>=0.6.1",
    "alembic>=1.13.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pre-commit>=3.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.black]
target-version = ['py311']
line-length = 100
skip-string-normalization = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]